Updated page Workbenches/gl

--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -48,7 +48,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../BIM_Workbench.html" title="BIM Workbench">Banco de Traballo BIM</a> (Building Information Modelling) para traballar con elementos arquitect&oacute;nicos e crear modelos <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a>. Combina o Banco de traballo en arco e o  Banco de Traballo BIM anteriormente externo dispo&ntilde;ible en <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" en <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" en <span style="font-size:small;color:blue;">0.21 and below</span>.<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Release_notes_0.21">https://wiki.freecad.org/Release_notes_0.21</a></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Draft_Workbench.html" title="Draft Workbench">Banco de traballo Borrador</a> (Draft) cont&eacute;n ferramentas en 2D e operaci&oacute;ns b&aacute;sicas de CAD 2D e 3D.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../FEM_Workbench.html" title="FEM Workbench">Banco de Traballo FEM</a> (Finite Element Analysis) proporciona un fluxo de traballo de an&aacute;lise de elementos finitos (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Inspection_Workbench.html" title="Inspection Workbench">Banco de Traballo Inspecci&oacute;n</a> (Inspection) est&aacute; feito para proporcionarche ferramentas espec&iacute;ficas para o exame de formas. A&iacute;nda est&aacute; nas primeiras etapas de desenvolvemento. <code>D</code></li></ul>
@@ -90,12 +90,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115174906
+Cached time: 20260115175121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.114 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 221/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
@@ -106,17 +106,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.838      1 -total
- 22.63%    1.774      2 Template:Docnav
- 13.20%    1.034      5 Template:Incode
- 13.18%    1.033      3 Template:Version
- 12.09%    0.948      1 Template:MenuCommand
- 11.42%    0.895      2 Template:VersionMinus
- 10.87%    0.852      1 Template:Button
-  7.20%    0.564      1 Template:Userdocnavi/gl
+100.00%   16.347      1 -total
+ 24.88%    4.068      2 Template:Docnav
+ 19.64%    3.210      5 Template:Incode
+ 13.70%    2.240      1 Template:MenuCommand
+ 11.02%    1.802      3 Template:Version
+  9.82%    1.606      2 Template:VersionMinus
+  9.73%    1.590      1 Template:Button
+  4.83%    0.790      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115174906 and revision id 1738991. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175121 and revision id 1738993. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
