--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -48,7 +48,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../BIM_Workbench.html" title="BIM Workbench">Banco de Traballo BIM</a> (Building Information Modelling) para traballar con elementos arquitect&oacute;nicos e crear modelos <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a>. Combina o Banco de traballo en arco e o  Banco de Traballo BIM anteriormente externo dispo&ntilde;ible en <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" en <a href="../index.php?title=Template;Https;/wiki.freecad.org/Release_notes_0.21&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Https://wiki.freecad.org/Release notes 0.21 (page does not exist)">Template:Https://wiki.freecad.org/Release notes 0.21</a>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" na versi&oacute;n <a href="../CAM_Workbench.html" title="CAM Workbench">0.21</a> e anteriores.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Draft_Workbench.html" title="Draft Workbench">Banco de traballo Borrador</a> (Draft) cont&eacute;n ferramentas en 2D e operaci&oacute;ns b&aacute;sicas de CAD 2D e 3D.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../FEM_Workbench.html" title="FEM Workbench">Banco de Traballo FEM</a> (Finite Element Analysis) proporciona un fluxo de traballo de an&aacute;lise de elementos finitos (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Inspection_Workbench.html" title="Inspection Workbench">Banco de Traballo Inspecci&oacute;n</a> (Inspection) est&aacute; feito para proporcionarche ferramentas espec&iacute;ficas para o exame de formas. A&iacute;nda est&aacute; nas primeiras etapas de desenvolvemento. <code>D</code></li></ul>
@@ -90,14 +90,14 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115175153
+Cached time: 20260115175320
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 217/1000000
-Post&#8208;expand include size: 2299/2097152 bytes
+CPU time usage: 0.098 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 215/1000000
+Post&#8208;expand include size: 2242/2097152 bytes
 Template argument size: 410/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
@@ -106,18 +106,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.821      1 -total
- 19.09%    2.829      5 Template:Incode
- 14.77%    2.189      2 Template:Docnav
- 14.38%    2.132      1 Template:MenuCommand
- 10.16%    1.506      3 Template:Version
-  9.94%    1.473      1 Template:Userdocnavi/gl
-  9.06%    1.342      1 Template:Button
-  7.91%    1.173      1 Template:VersionMinus
-  6.21%    0.921      1 Template:Https://wiki.freecad.org/Release_notes_0.21
+100.00%    9.574      1 -total
+ 24.58%    2.353      2 Template:Docnav
+ 15.02%    1.438      5 Template:Incode
+ 13.17%    1.261      3 Template:Version
+ 12.07%    1.156      1 Template:VersionMinus
+ 10.27%    0.983      1 Template:MenuCommand
+ 10.12%    0.969      1 Template:Button
+  6.99%    0.669      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175153 and revision id 1738995. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175319 and revision id 1738997. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
