--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -46,7 +46,7 @@
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code>. P&oacute;dese activar un banco de traballo desactivado en <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. Introducido en <a href="../Release_notes_1.0.html" title="Release notes 1.0">1.0</a></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../BIM_Workbench.html" title="BIM Workbench">Banco de Traballo BIM</a> (Building Information Modelling) para traballar con elementos arquitect&oacute;nicos e crear modelos <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a>. Combina o Banco de traballo en arco e o  Banco de Traballo BIM anteriormente externo dispo&ntilde;ible na versi&oacute;n <a href="../Release_notes_0.21.html" title="Release notes 0.21">0.21</a> e anteriores.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" na versi&oacute;n <a href="../Release_notes_0.21.html" title="Release notes 0.21">0.21</a> e anteriores.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Draft_Workbench.html" title="Draft Workbench">Banco de traballo Borrador</a> (Draft) cont&eacute;n ferramentas en 2D e operaci&oacute;ns b&aacute;sicas de CAD 2D e 3D.</li></ul>
@@ -90,15 +90,15 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115175732
+Cached time: 20260115175939
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.140 seconds
-Preprocessor visited node count: 209/1000000
-Post&#8208;expand include size: 2179/2097152 bytes
-Template argument size: 406/2097152 bytes
+CPU time usage: 0.093 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 202/1000000
+Post&#8208;expand include size: 2102/2097152 bytes
+Template argument size: 400/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -106,16 +106,16 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.666      1 -total
- 25.74%    1.973      2 Template:Docnav
- 15.58%    1.194      5 Template:Incode
- 14.62%    1.121      3 Template:Version
- 13.83%    1.060      1 Template:MenuCommand
- 12.94%    0.992      1 Template:Button
-  9.09%    0.697      1 Template:Userdocnavi/gl
+100.00%    8.860      1 -total
+ 21.34%    1.891      2 Template:Docnav
+ 18.78%    1.664      1 Template:Userdocnavi/gl
+ 14.59%    1.293      5 Template:Incode
+ 13.78%    1.221      1 Template:MenuCommand
+ 11.45%    1.014      1 Template:Button
+ 10.27%    0.910      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175732 and revision id 1739003. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175939 and revision id 1739005. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
