Updated page Workbenches/gl

--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -43,7 +43,7 @@
 </p>
 <h3><span class="mw-headline" id="Actual">Actual</span></h3>
 <p>Os bancos de traballo que se listan a continuaci&oacute;n incl&uacute;ense con cada instalaci&oacute;n de FreeCAD.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code>. P&oacute;dese activar un banco de traballo desactivado en <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+</p><p>Introducido en <a href="../Release_notes_1.0.html" title="Release notes 1.0">1.0</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code>. P&oacute;dese activar un banco de traballo desactivado en <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. Introducido en <a href="../Release_notes_1.0.html" title="Release notes 1.0">1.0</a></li></ul>
@@ -90,15 +90,15 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115175939
+Cached time: 20260115180029
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.142 seconds
-Preprocessor visited node count: 202/1000000
-Post&#8208;expand include size: 2102/2097152 bytes
-Template argument size: 400/2097152 bytes
+CPU time usage: 0.121 seconds
+Real time usage: 0.202 seconds
+Preprocessor visited node count: 195/1000000
+Post&#8208;expand include size: 2025/2097152 bytes
+Template argument size: 394/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -106,16 +106,16 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.860      1 -total
- 21.34%    1.891      2 Template:Docnav
- 18.78%    1.664      1 Template:Userdocnavi/gl
- 14.59%    1.293      5 Template:Incode
- 13.78%    1.221      1 Template:MenuCommand
- 11.45%    1.014      1 Template:Button
- 10.27%    0.910      2 Template:Version
+100.00%   10.661      1 -total
+ 27.72%    2.955      2 Template:Docnav
+ 14.67%    1.564      5 Template:Incode
+ 14.23%    1.517      1 Template:Userdocnavi/gl
+ 13.78%    1.469      1 Template:MenuCommand
+ 11.51%    1.227      1 Template:Version
+ 11.50%    1.226      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115175939 and revision id 1739005. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115180029 and revision id 1739007. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
