Created page with "* {{Button|[[Image:FCSpring_Helix_Variable_Icon_02.png|16px]] Load}} : Die Schaltfläche Load öffnet ein Dialogfeld zum Lesen einer Datei '''.FCSpring'''. * {{Button|[[Image:FCSpring_Helix_Variable_Icon_03.png|16px]] Save}} : Die Schaltfläche Save öffnet ein Dialogfeld zum Speichern einer Datei '''.FCSpring''' mit Federkonfiguration modifizieren oder nicht. * {{Button|[[Image:FCSpring_Helix_Variable_Icon_02b.png|16px]] Load Coordinates}} : Ein Dialogfeld öffnen, um e..."

--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -205,16 +205,14 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <p><span id="Command"></span>
 </p>
 <h4><span class="mw-headline" id="Befehl">Befehl</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: The Lead button open a dialogue box to read a file <b>.FCSpring</b>.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03.png&amp;filetimestamp=20160904162346&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save</span>&nbsp;: The Save button open a dialogue box to save a file <b>.FCSpring</b> with configuration spring modify or not.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02b.png&amp;filetimestamp=20160904162239&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load Coordinates</span>&nbsp;: Open a dialogue box to read a file <b>.FCSpringCoor</b> (all coordinates of points of the spring).</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03b.png&amp;filetimestamp=20160904174322&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save Coordinates</span>&nbsp;: Open a dialogue box to save a file <b>.FCSpringCoor</b> (all coordinates of points of the spring).</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_04.png&amp;filetimestamp=20160904162609&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_04.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> Quit</span>&nbsp;: Quit the macro.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_05.png&amp;filetimestamp=20160904162655&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_05.png" decoding="async" width="16" height="15" class="mw-file-element" data-file-width="47" data-file-height="45"></a></span> Reset</span>&nbsp;: Reset the macro to default configuration.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_06.png&amp;filetimestamp=20160904162729&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_06.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Launch</span>&nbsp;: Launch the macro and create the spring configured.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Help</span>&nbsp;: This button display the wiki page int the FreeCAD browser.</li></ul>
-</div>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: Die Schaltfl&auml;che Load &ouml;ffnet ein Dialogfeld zum Lesen einer Datei <b>.FCSpring</b>.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03.png&amp;filetimestamp=20160904162346&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save</span>&nbsp;: Die Schaltfl&auml;che Save &ouml;ffnet ein Dialogfeld zum Speichern einer Datei <b>.FCSpring</b> mit Federkonfiguration modifizieren oder nicht.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02b.png&amp;filetimestamp=20160904162239&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load Coordinates</span>&nbsp;: Ein Dialogfeld &ouml;ffnen, um eine Datei <b>.FCSpringCoor</b> (alle Koordinaten der Punkte der Feder) zu lesen.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03b.png&amp;filetimestamp=20160904174322&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save Coordinates</span>&nbsp;: Ein Dialogfeld &ouml;ffnen, um eine Datei <b>.FCSpringCoor</b> (alle Koordinaten der Punkte der Feder) zu speichern.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_04.png&amp;filetimestamp=20160904162609&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_04.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> Quit</span>&nbsp;: Das Makro beenden.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_05.png&amp;filetimestamp=20160904162655&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_05.png" decoding="async" width="16" height="15" class="mw-file-element" data-file-width="47" data-file-height="45"></a></span> Reset</span>&nbsp;: Das Makro auf die Standardkonfiguration zur&uuml;cksetzen.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_06.png&amp;filetimestamp=20160904162729&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_06.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Launch</span>&nbsp;: Das Makro starten und die konfigurierte Feder erstellen.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Help</span>&nbsp;: Diese Schaltfl&auml;che zeigt die Wiki-Seite im FreeCAD-Browser an.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_05.png&amp;filetimestamp=20200419154037&amp;.html" class="mw-file-description"><img src="../File/Macro_FCSpring_Helix_Variable_05.png" decoding="async" width="429" height="134" class="mw-file-element" data-file-width="429" data-file-height="134"></a></span>
 </p>
 <div style="clear:both"></div>
@@ -507,13 +505,13 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116041427
+Cached time: 20260116042735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.236 seconds
-Real time usage: 0.341 seconds
-Preprocessor visited node count: 950/1000000
+CPU time usage: 0.204 seconds
+Real time usage: 0.260 seconds
+Preprocessor visited node count: 949/1000000
 Post&#8208;expand include size: 24590/2097152 bytes
 Template argument size: 4652/2097152 bytes
 Highest expansion depth: 6/100
@@ -523,19 +521,19 @@ Unstrip post&#8208;expand size: 28504/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  141.420      1 -total
-  2.56%    3.626      6 Template:Code
-  2.49%    3.523      1 Template:Macro/de
-  2.34%    3.316     12 Template:SpinBox
-  2.07%    2.927      2 Template:RadioButton
-  2.06%    2.911      8 Template:CheckBox
-  1.63%    2.311     25 Template:Button
-  1.40%    1.978      1 Template:Codeextralink
-  1.01%    1.430      1 Template:KEY
-  0.96%    1.355     14 Template:Clear
+100.00%  108.357      1 -total
+  3.47%    3.756      6 Template:Code
+  3.05%    3.301      1 Template:Macro/de
+  2.65%    2.875     12 Template:SpinBox
+  2.22%    2.400      8 Template:CheckBox
+  2.13%    2.303      2 Template:RadioButton
+  1.84%    1.994     25 Template:Button
+  1.68%    1.822      1 Template:Codeextralink
+  1.16%    1.260     14 Template:Clear
+  1.03%    1.117      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116041427 and revision id 1739013. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116042735 and revision id 1739015. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
