--- a/wiki/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/Macro_FCSpring_Helix_Variable.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Makro FC Feder-Helix-Variable (42% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FCFeder-Helix-Variable (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCSpring Helix Variable (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="it/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Molla a spirale variabile (57% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCSpring Zmienna spirala (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -185,7 +185,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 </p>
 <div style="clear:both"></div>
 <h4><span class="mw-headline" id="Command">Command</span></h4>
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: The Lead button open a dialogue box to read a file <b>.FCSpring</b>.</li>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: The Load button open a dialogue box to read a file <b>.FCSpring</b>.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FCSpring_Helix_Variable_Icon_03.png&amp;filetimestamp=20160904162346&amp;.html" class="mw-file-description"><img src="File/FCSpring_Helix_Variable_Icon_03.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save</span>&nbsp;: The Save button open a dialogue box to save a file <b>.FCSpring</b> with configuration spring modify or not.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FCSpring_Helix_Variable_Icon_02b.png&amp;filetimestamp=20160904162239&amp;.html" class="mw-file-description"><img src="File/FCSpring_Helix_Variable_Icon_02b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load Coordinates</span>&nbsp;: Open a dialogue box to read a file <b>.FCSpringCoor</b> (all coordinates of points of the spring).</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FCSpring_Helix_Variable_Icon_03b.png&amp;filetimestamp=20160904174322&amp;.html" class="mw-file-description"><img src="File/FCSpring_Helix_Variable_Icon_03b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save Coordinates</span>&nbsp;: Open a dialogue box to save a file <b>.FCSpringCoor</b> (all coordinates of points of the spring).</li>
@@ -208,7 +208,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Example_Report_view">Example Report view</span></h2>
 <p>When the macro is launched full list of turns is displayed in tabular form.
-</p><p>Here the data of the spring above and displayed in the Report view
+</p><p>Here the data of the spring above and displayed in the Report View
 <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_FCSpring_Helix_Variable_08.png&amp;filetimestamp=20141118192724&amp;.html" class="mw-file-description"><img src="File/Macro_FCSpring_Helix_Variable_08.png" decoding="async" width="948" height="60" class="mw-file-element" data-file-width="948" data-file-height="60"></a></span>
 </p>
 <div style="clear:both"></div>
@@ -224,7 +224,7 @@ ToolBar button </p><figure class="mw-default-size mw-halign-left" typeof="mw:Fil
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p><b>Macro_FCSpring_Helix_Variable.FCMacro</b>
-</p><p>Download the macro to Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
+</p><p>Download the macro from Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
 </p>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p>The above file is a macro in the form of GitHub code. Download the Zip on GitHub, and then follow the macros installation instructions for dummies shown at <a rel="nofollow" class="external text" href="https://wiki.opensourceecology.org/wiki/Installing_Macros_in_FreeCAD">installing FreeCAD macros in Ubuntu</a>.
@@ -361,7 +361,7 @@ ToolBar button </p><figure class="mw-default-size mw-halign-left" typeof="mw:Fil
 </p>
 <h2><span class="mw-headline" id="Version">Version</span></h2>
 <p>11/07/2024 version 01.19 delete <b>"import WebGui"</b> replaced by <b>"import webbrowser"</b> and optimise filter for <b>OS Linux Mint</b>
-</p><p>2023/09/01 Version 0.18c adding <b>FreeCAD.activeDocument().recompute(None,True,True)</b><i>Texte en italique</i> "bug" fixed by <b>Syres</b> thanks
+</p><p>2023/09/01 Version 0.18c adding <b>FreeCAD.activeDocument().recompute(None,True,True)</b><i>Text in italics</i> "bug" fixed by <b>Syres</b> thanks
 <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=703568#p703568">How to draw polygonal spirals in Freecad?</a>
 </p><p>2023/09/01 Version 0.18b correct (adapt) the code&nbsp;:
 </p>
@@ -466,35 +466,35 @@ ToolBar button </p><figure class="mw-default-size mw-halign-left" typeof="mw:Fil
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251024111530
+Cached time: 20260116043358
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.242 seconds
-Real time usage: 0.324 seconds
+CPU time usage: 0.169 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 1022/1000000
 Post&#8208;expand include size: 24425/2097152 bytes
 Template argument size: 4567/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28470/5000000 bytes
+Unstrip post&#8208;expand size: 28475/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.940      1 -total
-  2.94%    3.082      6 Template:Code
-  2.46%    2.579     25 Template:Button
-  2.34%    2.455     12 Template:SpinBox
-  2.27%    2.381      8 Template:CheckBox
-  2.20%    2.306      1 Template:Macro
-  2.08%    2.188      1 Template:Codeextralink
-  2.01%    2.109      2 Template:RadioButton
-  1.10%    1.159     14 Template:Clear
-  1.10%    1.156      1 Template:Caption
+100.00%   52.780      1 -total
+  4.71%    2.483     12 Template:SpinBox
+  4.61%    2.431      6 Template:Code
+  3.80%    2.007      1 Template:Macro
+  3.32%    1.753      8 Template:CheckBox
+  2.64%    1.395     25 Template:Button
+  2.23%    1.177      2 Template:RadioButton
+  1.78%    0.940      1 Template:Codeextralink
+  1.69%    0.891     14 Template:Clear
+  1.61%    0.849      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20251024111530 and revision id 1676474. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20260116043416 and revision id 1739016. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
