Created page with "<center> <gallery widths="400" heights="200"> File:Macro FCSpring Helix Variable 20.png|Derzeit ist das Makro nicht für Quadrate, Rechtecke usw. geeignet. <br />Nur Kreise funktionieren gut. </gallery> </center> <br /> <center> <gallery widths="300" heights="100"> File:Macro FCSpring Helix Variable 09.png|Zugriffsverletzung File:Macro FCSpring Helix Variable 10.png|TCollection_IndexedDataMap </gallery> </center> <br /> <center> <gallery widths="300" heights="100"> File:..."

--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -466,12 +466,11 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
 <p>Hier sind die Fehler, die ich bei den Sweep-Tests festgestellt habe!
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_20.png&amp;filetimestamp=20160906183547&amp;.html" class="mw-file-description" title="For the moment the macro is not adapted for the square, rectangle... Only circle work well"><img alt="For the moment the macro is not adapted for the square, rectangle... Only circle work well" src="../File/Macro_FCSpring_Helix_Variable_20.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">For the moment the macro is not adapted for the square, rectangle... <br>Only circle work well</div>
+			<div class="thumb" style="width: 430px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_20.png&amp;filetimestamp=20160906183547&amp;.html" class="mw-file-description" title="Derzeit ist das Makro nicht f&uuml;r Quadrate, Rechtecke usw. geeignet. Nur Kreise funktionieren gut."><img alt="Derzeit ist das Makro nicht f&uuml;r Quadrate, Rechtecke usw. geeignet. Nur Kreise funktionieren gut." src="../File/Macro_FCSpring_Helix_Variable_20.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Derzeit ist das Makro nicht f&uuml;r Quadrate, Rechtecke usw. geeignet. <br>Nur Kreise funktionieren gut.</div>
 		</li>
 </ul>
 </center>
@@ -480,8 +479,8 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 130px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_09.png&amp;filetimestamp=20141118195354&amp;.html" class="mw-file-description" title="ACCESS VIOLATION"><img alt="ACCESS VIOLATION" src="../File/Macro_FCSpring_Helix_Variable_09.png" decoding="async" width="300" height="93" class="mw-file-element" data-file-width="523" data-file-height="162"></a></span></div>
-			<div class="gallerytext">ACCESS VIOLATION</div>
+			<div class="thumb" style="width: 330px; height: 130px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_09.png&amp;filetimestamp=20141118195354&amp;.html" class="mw-file-description" title="Zugriffsverletzung"><img alt="Zugriffsverletzung" src="../File/Macro_FCSpring_Helix_Variable_09.png" decoding="async" width="300" height="93" class="mw-file-element" data-file-width="523" data-file-height="162"></a></span></div>
+			<div class="gallerytext">Zugriffsverletzung</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
 			<div class="thumb" style="width: 330px; height: 130px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_10.png&amp;filetimestamp=20141118195425&amp;.html" class="mw-file-description" title="TCollection_IndexedDataMap"><img alt="TCollection_IndexedDataMap" src="../File/Macro_FCSpring_Helix_Variable_10.png" decoding="async" width="85" height="100" class="mw-file-element" data-file-width="387" data-file-height="456"></a></span></div>
@@ -494,46 +493,45 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 130px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_11.png&amp;filetimestamp=20141118195455&amp;.html" class="mw-file-description" title="Wrong usage of punctual sections"><img alt="Wrong usage of punctual sections" src="../File/Macro_FCSpring_Helix_Variable_11.png" decoding="async" width="93" height="100" class="mw-file-element" data-file-width="430" data-file-height="461"></a></span></div>
-			<div class="gallerytext">Wrong usage of punctual sections</div>
+			<div class="thumb" style="width: 330px; height: 130px;"><span typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_11.png&amp;filetimestamp=20141118195455&amp;.html" class="mw-file-description" title="Falsche Verwendung von punktuellen Abschnitten"><img alt="Falsche Verwendung von punktuellen Abschnitten" src="../File/Macro_FCSpring_Helix_Variable_11.png" decoding="async" width="93" height="100" class="mw-file-element" data-file-width="430" data-file-height="461"></a></span></div>
+			<div class="gallerytext">Falsche Verwendung von punktuellen Abschnitten</div>
 		</li>
 </ul>
 </center>
 <p><br>
 </p>
-</div>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116042735
+Cached time: 20260116044214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.204 seconds
-Real time usage: 0.260 seconds
-Preprocessor visited node count: 949/1000000
+CPU time usage: 0.177 seconds
+Real time usage: 0.232 seconds
+Preprocessor visited node count: 948/1000000
 Post&#8208;expand include size: 24590/2097152 bytes
 Template argument size: 4652/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28504/5000000 bytes
+Unstrip post&#8208;expand size: 28573/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.357      1 -total
-  3.47%    3.756      6 Template:Code
-  3.05%    3.301      1 Template:Macro/de
-  2.65%    2.875     12 Template:SpinBox
-  2.22%    2.400      8 Template:CheckBox
-  2.13%    2.303      2 Template:RadioButton
-  1.84%    1.994     25 Template:Button
-  1.68%    1.822      1 Template:Codeextralink
-  1.16%    1.260     14 Template:Clear
-  1.03%    1.117      1 Template:Caption
+100.00%   86.513      1 -total
+  3.27%    2.831      1 Template:Macro/de
+  3.14%    2.712      6 Template:Code
+  2.92%    2.524      8 Template:CheckBox
+  2.90%    2.511      2 Template:RadioButton
+  2.85%    2.465     12 Template:SpinBox
+  1.98%    1.713     25 Template:Button
+  1.89%    1.635      1 Template:Codeextralink
+  1.46%    1.262      1 Template:Caption
+  1.39%    1.205     14 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116042735 and revision id 1739015. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116044214 and revision id 1739018. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
